--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "gradio>=5.25.2",
+    "hf-xet==1.0.3",
+    "huggingface-hub==0.30.2",
     "ipywidgets>=8.1.6",
     "kagglehub>=0.3.11",
     "langchain-chroma>=0.2.3",
@@ -16,5 +18,8 @@ dependencies = [
     "pandas>=2.2.3",
     "python-dotenv>=1.1.0",
     "seaborn>=0.13.2",
+    "torch==2.6.0+cu124",
+    "torchaudio==2.6.0+cu124",
+    "torchvision==0.21.0+cu124",
     "transformers>=4.51.3",
 ]
